<resources>
    <string name="app_name">Bücherei-Verwaltung</string>
    <string name="app_no">Nein</string>
    <string name="app_yes">Ja</string>
    <string name="app_back">Zurück</string>
    <string name="app_cont">Weiter</string>
    <string name="app_done">Fertig</string>
    <string name="app_cancel">Abbrechen</string>
    <string name="app_pdf_icon">Eine PDF-Datei</string>
    <string name="app_book_icon">Ein Buch</string>
    <string name="app_user_icon">Ein Nutzer</string>
    <string name="app_animation">Eine Animation</string>
    <string name="app_step_tab_optional">Optional</string>
    <string name="app_step_tab_clear_input">Eingaben löschen</string>
    <string name="app_time">"HH':'mm"</string>
    <string name="app_date">"dd'.'MM'.'yyyy"</string>
    <string name="app_month">"MM'/'yyyy"</string>
    <string name="csv_parser_internal_error">"Interner Fehler: %1$s"</string>
    <string name="csv_parser_line_template">"Zeile %1$d: %2$s\n"</string>
    <string name="csv_parser_missing_headline">"Der Kopfdatensatz mit den Spaltennamen fehlt"</string>
    <string name="csv_parser_unknown_column">"Spaltenname '%1$s' ist unbekannt"</string>
    <string name="csv_parser_missing_column">"Zu wenig Einträge für Spalte '%1$s'"</string>
    <string name="csv_parser_empty_column">"Spalte '%1$s' darf nicht leer sein"</string>
    <string name="csv_parser_flawed_column">"Spalte '%1$s' fehlerhaft: %2$s"</string>
    <string name="serial_display_printed">Erstellt (Seite %1$d)</string>
    <string name="serial_display_lost">Ausgesondert am %1$s</string>
    <string name="serial_display_used_label">Aufgeklebt</string>
    <string name="serial_display_used_idcard">Ausgegeben</string>
    <string name="serial_display_stocked">Registriert und im Vorrat</string>
    <string name="user_role">Funktion</string>
    <string name="user_admin">Verwalter</string>
    <string name="user_tutor">Mitarbeiter</string>
    <string name="user_pupil">Schüler</string>
    <string name="user_name1">Vorname</string>
    <string name="user_name2">Nachname</string>
    <string name="user_pupil_name1">Klasse</string>
    <string name="user_pupil_name2">Schuljahr</string>
    <string name="user_display_admin">Verwalter \"%1$s %2$s\"</string>
    <string name="user_display_tutor">Mitarbeiter \"%1$s %2$s\"</string>
    <string name="user_display_pupil">Schüler #%1$02d der Klasse %2$s (%3$s)</string>
    <string name="user_display_name">%1$s %2$s</string>
    <string name="user_display_serial">%02d</string>
    <string name="user_display_idcard_n_a">n.&#x00a0;v.</string>
    <string name="user_display_has_books">hat Bücher</string>
    <string name="book_title">Titel</string>
    <string name="book_publisher">Verlag</string>
    <string name="book_author">Autor</string>
    <string name="book_keywords">Schlagwörter</string>
    <string name="book_shelf">Kategorie</string>
    <string name="book_number">Nummer</string>
    <string name="book_period">Leihfrist</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_label">Klebeetikett</string>
    <string name="book_display_vanished">Buch fehlt seit %1$s</string>
    <string name="lending_display_issued">Ausgeliehen seit %1$s</string>
    <string name="lending_display_issued_delay">%1$d Tage im Verzug seit %2$s - Ausgeliehen seit %3$s</string>
    <string name="lending_display_returned">Ausgeliehen vom %1$s bis %2$s</string>
    <string name="lending_display_returned_delay">Rückgabe %1$d Tage verspätet - Ausgeliehen vom %2$s bis %3$s</string>
    <string name="lending_display_issue">Ausgeliehen am %1$s</string>
    <string name="lending_display_delay_0">*** Noch kein Verzug ***</string>
    <string name="lending_display_reminder">%1$d. Erinnerung am %2$s</string>
    <string name="lending_display_delay_n">%1$d Tage im Verzug seit %2$s</string>
    <string name="lending_display_dunning_letter">%1$d. Mahnschreiben am %2$s</string>
    <string name="pdf_page">Seite</string>
    <string name="pdf_page_of">Seite %1$d von %2$d</string>
    <string name="pdf_labels_title">Klebeetiketten</string>
    <string name="pdf_labels_subject">Klebeetiketten zum Ausdrucken</string>
    <string name="pdf_idcards_title">Ausweiskarten</string>
    <string name="pdf_idcards_subject">Ausweiskarten zum Ausdrucken</string>
    <string name="pdf_pupil_list_title">Schülerliste %1$s - %2$s - %3$s</string>
    <string name="pdf_pupil_list_subject">Schülerliste zum Ausdrucken</string>
    <string name="pdf_pupil_list_headline_1">Schülerliste</string>
    <string name="pdf_pupil_list_headline_2">Klasse %1$s (Schuljahr %2$s)</string>
    <string name="pdf_pupil_list_headline_3">(Ergänzungen vom %1$s mit %2$d neuen Schülern)</string>
    <string name="pdf_pupil_list_text_1">
        Liebe Lehrkraft der Klasse {CLASS-NAME},
        \n\n
    </string>
    <string name="pdf_pupil_list_text_2a">
        bitte verteilen Sie die beigefügten Ausweise der Bücherei an die
        Schüler Ihrer Klasse und notieren Sie deren Namen in der dafür vorgesehenen Spalte.
    </string>
    <string name="pdf_pupil_list_text_2b">
        bitte verteilen Sie die beigefügten Ausweise der Bücherei an die neuen
        Schüler Ihrer Klasse und notieren Sie deren Namen in der dafür vorgesehenen Spalte.
    </string>
    <string name="pdf_pupil_list_text_3">
        \n\n
        Schülernamen dürfen aus Datenschutzgründen nicht auf dem Tablet gespeichert werden.
        Ersatzweise wer|den Schüler über ihre Klasse und eine fortlaufende Nummer identifiziert.
        Diese Liste ist deshalb erforderlich, um der Nummer einen Namen zuordnen zu können, wenn beispielsweise
        von uns Mahnlisten erstellt und an Sie verteilt werden. Wir bitten Sie daher, eine Kopie der ausgefüllten
        Liste zur Sicherheit im Sekretariat zu hinterlegen, falls das Original einmal abhandenkommt.
        \n\n\n
        Wir danken Ihnen herzlich für Ihre Mithilfe,
        \n\n\n\n\n
        Ihre Büchereiverwaltung
    </string>
    <string name="pdf_pupil_list_column_1">Nr.</string>
    <string name="pdf_pupil_list_column_2">Ausweis</string>
    <string name="pdf_pupil_list_column_3">Name des Schülers</string>
    <string name="pdf_reminder_idcards_title">Liste der fehlenden Ausweise vom %1$s</string>
    <string name="pdf_reminder_idcards_subject">Mahnliste zum Ausdrucken</string>
    <string name="pdf_reminder_idcards_text">
        Liebe Lehrkräfte,
        \n\n\n
        das Schuljahr geht zu Ende, und noch immer haben nicht alle Schüler ihre Ausweise zurückgegeben.
        Bitte unterstützen Sie uns und ermahnen Sie die Schüler Ihrer Klasse, umgehend ihre Ausweise bei
        Ihnen oder zu den üblichen Öffnungszeiten in der Bücherei abzugeben.
        \n\n
        Der Materialwert der Ausweiskarten ist zwar nicht besonders groß, aber für neue Ausweise müssen die
        Mit|arbeiter der Bücherei-Verwaltung viele Stunden Arbeit aufwenden. Die Ausweise müssen als PDF-Datei
        er|stellt, doppelseitig farbig bedruckt und zuletzt noch laminiert werden. In dieser Zeit können wir uns
        auch sinn|volleren Aufgaben zuwenden.
        \n\n
        Falls ein Schüler seinen Ausweis nicht mehr findet, bitten wir Sie, dies in der freien Spalte zu
        vermerken und die Liste an uns zurückzugeben, damit wir den Ausweis als verloren ausbuchen können.
        \n\n\n
        Wir danken Ihnen herzlich für Ihre Mithilfe,
        \n\n\n\n\n
        Ihre Büchereiverwaltung
    </string>
    <string name="pdf_reminder_idcards_headline">Klasse %1$s (Schuljahr %2$s)</string>
    <string name="pdf_reminder_idcards_column_1">Nr.</string>
    <string name="pdf_reminder_idcards_column_2">Ausweis</string>
    <string name="pdf_reminder_idcards_column_3">Bemerkungen der Lehrkraft</string>
    <string name="pdf_reminder_books_title">Mahnliste vom %1$s</string>
    <string name="pdf_reminder_books_subject">Mahnliste zum Ausdrucken</string>
    <string name="action_search">Suchen</string>
    <string name="action_filter">Listeninhalt einschränken</string>
    <string name="register_prints_label">Ausweise und Etiketten erstellen und registrieren</string>
    <string name="login_explanation">
        Bitte melden Sie sich an, indem Sie den Barcode Ihrer Ausweiskarte scannen.
    </string>
    <string name="login_message_1_lost">Dieser Ausweis wurde für verloren erklärt!</string>
    <string name="login_message_2_please_return_idcard">
        Bitte geben Sie den Ausweis umgehend an einen Bücherei-Verwalter zurück.
    </string>
    <string name="admin_message_no_pages_to_register">@string/register_prints_empty</string>
    <string name="admin_idcards_label">Ausweiskarten verwalten</string>
    <string name="admin_labels_label">Klebeetiketten verwalten</string>
    <string name="admin_labels_action_filter_printed">Erstellte Etiketten anzeigen</string>
    <string name="admin_labels_action_filter_stocked">Registrierte Etiketten anzeigen</string>
    <string name="admin_labels_action_filter_used">Aufgeklebte Etiketten anzeigen</string>
    <string name="admin_labels_action_filter_lost">Ausgesonderte Etiketten anzeigen</string>
    <string name="admin_labels_action_delete">Erstellte Etiketten verwerfen</string>
    <string name="admin_labels_action_create">Neue Etiketten erstellen</string>
    <string name="admin_users_label">Nutzerkonten verwalten</string>
    <string name="admin_users_add_step_2_explanation_pupil_2">
        Zum Einrichten der neuen Konten müssen Sie abschließend den %1$d Schülern Ausweise zuteilen.\n
        \n• Nehmen Sie %1$d Ausweiskarten aus dem Vorrat und scannen Sie diese.
        \n• Drücken Sie \"FERTIG\", um die Nutzerkonten einzurichten.
        \n• Geben Sie die Ausweise zusammen mit der ausgedruckten Schülerliste der
        \nLehrkraft der Klasse %3$s (%4$s).
    </string>
    <string name="admin_users_add_step_2_status_n">Noch %1$d Ausweiskarten zu scannen …</string>
    <string name="admin_users_add_step_2_idcard">(zuletzt gescannt: %1$s)</string>
    <string name="admin_books_label">Bücherbestand verwalten</string>
    <string name="admin_books_add_step_0_explanation">
        Bitte scannen Sie als Erstes die ISBN des Buchs.
    </string>
    <string name="admin_books_add_step_0_isbn">ISBN: %1$s</string>
    <string name="admin_books_add_step_0_no_isbn">Das Buch hat keine ISBN</string>
    <string name="stocktaking_idcards_label">Ausweiskarten-Inventur</string>
    <string name="stocktaking_labels_label">Klebeetiketten-Inventur</string>
    <string name="admin_lendings_action_filter_delay_28">Ausleihen mit mindestens 28 Tagen Verzug anzeigen</string>
    <string name="admin_lendings_action_filter_delay_21">Ausleihen mit mindestens 21 Tagen Verzug anzeigen</string>
    <string name="admin_lendings_action_filter_delay_14">Ausleihen mit mindestens 14 Tagen Verzug anzeigen</string>
    <string name="admin_lendings_action_filter_delay_07">Ausleihen mit mindestens 7 Tagen Verzug anzeigen</string>
    <string name="admin_lendings_action_filter_no_delay">Alle offenen Ausleihen anzeigen</string>
</resources>