<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/action_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always">
    </item>
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_black_24dp"
        android:title="@string/action_filter"
        android:visible="false"
        app:showAsAction="ifRoom">
        <menu>
            <group android:checkableBehavior="all">
                <item
                    android:id="@+id/action_filter_printed"
                    android:checked="true"
                    android:onClick="onFilterItemClicked"
                    android:title="@string/admin_labels_action_filter_printed">
                </item>
                <item
                    android:id="@+id/action_filter_stocked"
                    android:checked="true"
                    android:onClick="onFilterItemClicked"
                    android:title="@string/admin_labels_action_filter_stocked">
                </item>
                <item
                    android:id="@+id/action_filter_used"
                    android:onClick="onFilterItemClicked"
                    android:title="@string/admin_labels_action_filter_used">
                </item>
                <item
                    android:id="@+id/action_filter_lost"
                    android:checked="true"
                    android:onClick="onFilterItemClicked"
                    android:title="@string/admin_labels_action_filter_lost">
                </item>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_black_24dp"
        android:onClick="onDeleteClicked"
        android:title="@string/admin_labels_action_delete"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/action_create"
        android:icon="@drawable/ic_add_black_24dp"
        android:onClick="onCreateClicked"
        android:title="@string/admin_labels_action_create"
        android:visible="false"
        app:showAsAction="ifRoom">
    </item>

</menu>