<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.fahimu.schlib.app.AdminActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_margin="24dp"
        android:background="@color/color_primary_light"
        android:clipToPadding="false"
        android:columnCount="1"
        android:descendantFocusability="blocksDescendants"
        android:padding="12dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@android:color/white"
            android:elevation="4dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/admin_register_prints_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/admin_register_prints"
                android:layout_margin="8dp"
                android:layout_toStartOf="@id/admin_register_prints"
                android:gravity="center_horizontal"
                android:text="@string/admin_message_no_pages_to_register"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/admin_register_prints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:onClick="onRegisterPrintsClicked"
                android:text="@string/register_prints_label" />

        </RelativeLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:background="@android:color/white"
            android:columnCount="3"
            android:elevation="4dp"
            android:padding="8dp">

            <Button
                android:id="@+id/admin_admin_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onAdminLabelsClicked"
                android:text="@string/admin_labels_label" />

            <Button
                android:id="@+id/admin_stocktaking_labels"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onStocktakingLabelsClicked"
                android:text="@string/stocktaking_labels_label" />

            <Button
                android:id="@+id/admin_admin_books"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onAdminBooksClicked"
                android:text="@string/admin_books_label" />

            <Button
                android:id="@+id/admin_admin_idcards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onAdminIdcardsClicked"
                android:text="@string/admin_idcards_label" />

            <Button
                android:id="@+id/admin_stocktaking_idcards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onStocktakingIdcardsClicked"
                android:text="@string/stocktaking_idcards_label" />

            <Button
                android:id="@+id/admin_admin_users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:onClick="onAdminUsersClicked"
                android:text="@string/admin_users_label" />

        </GridLayout>

    </GridLayout>

</RelativeLayout>